--- a/Frontend/src/Components/User.css
+++ b/Frontend/src/Components/User.css
@@ -8,7 +8,6 @@
 
 .userFormCont {
     display: flex;
-    width: 1000px;
     justify-content: space-between;
     column-gap: 20vw;
 }
