--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -10,7 +10,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  overflow: scroll;
+  overflow: auto;
   --swiper-navigation-size: 15px;
   --swiper-theme-color: lightgoldenrodyellow;
 }
